rismosi System.out.println e risolte alcune deprecazioni (new Integer -> Integer.valueOf() )